--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,20 @@ dist
 npm-debug.log*
 yarn.lock
 .vscode/launch.json
+
+# SQLite database files
+*.db
+*.sqlite
+*.sqlite3
+persistent_variables.db
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE files
+.idea/
+*.swp
+*.swo
+*~
