fix lint issues

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "license": "MIT",
   "homepage": "",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Stancu Florin"
   },
   "repository": {
     "type": "git",
